# solana-cpmm-program

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
scripts/: add-liquidity.ts  create-mint.ts  create-pair.ts  init-factory.ts  mint-to.ts  remove-liquidity.ts  skim.ts  swap.ts  sync.ts
src/: constants.rs  lib.rs  math.rs  state.rs
src/instructions/: add_liquidity.rs  create_pair.rs  init_factory.rs  lib.rs  mod.rs  remove_liquidity.rs  skim.rs  swap.rs  sync.rs
tests/: add_liquidity.rs  create_pair.rs  helper.rs  init_factory.rs  remove_liquidity.rs  skim.rs  swap.rs  sync.rs
