[package]
name = "solana_cpmm_program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
custom-heap = []
custom-panic = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[dependencies]
borsh = "1.5"
solana-program = "2.2.0"
solana-program-pack = "3.0.0"
solana-address = "2.0"
spl-token-interface = "2.0.0"
spl-associated-token-account-interface = "2.0.0"

[dev-dependencies]
litesvm = "0.7"
solana-sdk = "2.3"
solana-client = "2.3"
litesvm-token = "0.7"
solana-transaction-status-client-types = "2.3"
